Fix layout issues for mobile screens

--- a/src/styles/Hero.module.css
+++ b/src/styles/Hero.module.css
@@ -23,3 +23,10 @@
     border-radius: 5px;
     width: 400px;
 }
+
+@media(max-width: 700px) {
+    .heroContainer {
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+}
